# gtkweighty

./: CMakeLists.txt  CMakePresets.json  README.md  main.c
src/: actions.c  actions.h  browser.c  browser.h  comm.c  comm.h  config.c  config.h  gtkmain.c  gtkmain.h  info.c  info.h  models.c  models.h  myutils.c  myutils.h  phone.c  phone.h  playing.c  playing.h  stats.c  stats.h  stats_actions.c  stats_actions.h
